APIHelper/DescriptionParser/obj/Debug/netcoreapp3.1/DescriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\xampp\htdocs\captcha\APIHelper\DescriptionParser\Parsing\DescriptParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class DescriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Hash=1, Star=2, Semicolon=3, Colin=4, Langle=5, Rangle=6, Lparam=7, Rparam=8, 
		LCurly=9, RCurly=10, TablePrefix=11, ArgumentPrefix=12, Comma=13, Uses=14, 
		As=15, HttpMethod=16, Function=17, Table=18, Identifier=19, Literal=20, 
		NullLiteral=21, BooleanLiteral=22, DecimalLiteral=23, HexIntegerLiteral=24, 
		OctalIntegerLiteral=25, OctalIntegerLiteral2=26, BinaryIntegerLiteral=27, 
		StringLiteral=28, WhiteSpaces=29, LineTerminator=30, TableReference=31, 
		ArgumentReference=32, LParam=33, RParam=34, Colon=35;
	public const int
		RULE_tableReference = 0, RULE_argumentReference = 1, RULE_reference = 2, 
		RULE_column = 3, RULE_typedParameter = 4, RULE_columnParameter = 5, RULE_functionParameter = 6, 
		RULE_superFunctionArgument = 7, RULE_superFunction = 8, RULE_superFunctionClause = 9, 
		RULE_usesClause = 10, RULE_usesFrag = 11, RULE_functionDefinition = 12, 
		RULE_tableDefinition = 13, RULE_literalDefinition = 14, RULE_definition = 15, 
		RULE_file = 16, RULE_sectionHeader = 17, RULE_section = 18, RULE_subsectionHeader = 19, 
		RULE_subsection = 20;
	public static readonly string[] ruleNames = {
		"tableReference", "argumentReference", "reference", "column", "typedParameter", 
		"columnParameter", "functionParameter", "superFunctionArgument", "superFunction", 
		"superFunctionClause", "usesClause", "usesFrag", "functionDefinition", 
		"tableDefinition", "literalDefinition", "definition", "file", "sectionHeader", 
		"section", "subsectionHeader", "subsection"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'*'", "';'", "':'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", 
		"'t_'", "'&'", "','", "'uses'", "'as'", null, "'function'", "'table'", 
		null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Hash", "Star", "Semicolon", "Colin", "Langle", "Rangle", "Lparam", 
		"Rparam", "LCurly", "RCurly", "TablePrefix", "ArgumentPrefix", "Comma", 
		"Uses", "As", "HttpMethod", "Function", "Table", "Identifier", "Literal", 
		"NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", 
		"OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", 
		"StringLiteral", "WhiteSpaces", "LineTerminator", "TableReference", "ArgumentReference", 
		"LParam", "RParam", "Colon"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DescriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DescriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DescriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DescriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TableReferenceContext : ParserRuleContext {
		public ITerminalNode TablePrefix() { return GetToken(DescriptParser.TablePrefix, 0); }
		public ITerminalNode Identifier() { return GetToken(DescriptParser.Identifier, 0); }
		public TableReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableReference; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterTableReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitTableReference(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableReferenceContext tableReference() {
		TableReferenceContext _localctx = new TableReferenceContext(Context, State);
		EnterRule(_localctx, 0, RULE_tableReference);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(TablePrefix);
			State = 43; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentReferenceContext : ParserRuleContext {
		public ITerminalNode ArgumentPrefix() { return GetToken(DescriptParser.ArgumentPrefix, 0); }
		public ITerminalNode Identifier() { return GetToken(DescriptParser.Identifier, 0); }
		public ArgumentReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argumentReference; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterArgumentReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitArgumentReference(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgumentReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentReferenceContext argumentReference() {
		ArgumentReferenceContext _localctx = new ArgumentReferenceContext(Context, State);
		EnterRule(_localctx, 2, RULE_argumentReference);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(ArgumentPrefix);
			State = 46; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReferenceContext : ParserRuleContext {
		public ITerminalNode TableReference() { return GetToken(DescriptParser.TableReference, 0); }
		public ITerminalNode ArgumentReference() { return GetToken(DescriptParser.ArgumentReference, 0); }
		public ReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reference; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitReference(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReferenceContext reference() {
		ReferenceContext _localctx = new ReferenceContext(Context, State);
		EnterRule(_localctx, 4, RULE_reference);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(TableReference);
			State = 49; Match(ArgumentReference);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(DescriptParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(DescriptParser.Identifier, i);
		}
		public ColumnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_column; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterColumn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitColumn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnContext column() {
		ColumnContext _localctx = new ColumnContext(Context, State);
		EnterRule(_localctx, 6, RULE_column);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51; Match(Identifier);
			State = 52; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypedParameterContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(DescriptParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(DescriptParser.Identifier, i);
		}
		public ITerminalNode[] Star() { return GetTokens(DescriptParser.Star); }
		public ITerminalNode Star(int i) {
			return GetToken(DescriptParser.Star, i);
		}
		public TypedParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typedParameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterTypedParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitTypedParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypedParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypedParameterContext typedParameter() {
		TypedParameterContext _localctx = new TypedParameterContext(Context, State);
		EnterRule(_localctx, 8, RULE_typedParameter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; Match(Identifier);
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Star) {
				{
				{
				State = 55; Match(Star);
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 61; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnParameterContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(DescriptParser.Identifier, 0); }
		public ITerminalNode LCurly() { return GetToken(DescriptParser.LCurly, 0); }
		public ITerminalNode RCurly() { return GetToken(DescriptParser.RCurly, 0); }
		public TypedParameterContext[] typedParameter() {
			return GetRuleContexts<TypedParameterContext>();
		}
		public TypedParameterContext typedParameter(int i) {
			return GetRuleContext<TypedParameterContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(DescriptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(DescriptParser.Comma, i);
		}
		public ColumnParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnParameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterColumnParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitColumnParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumnParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnParameterContext columnParameter() {
		ColumnParameterContext _localctx = new ColumnParameterContext(Context, State);
		EnterRule(_localctx, 10, RULE_columnParameter);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; Match(Identifier);
			State = 64; Match(LCurly);
			State = 70;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 65; typedParameter();
					State = 66; Match(Comma);
					}
					} 
				}
				State = 72;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Identifier) {
				{
				State = 73; typedParameter();
				}
			}

			State = 76; Match(RCurly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterContext : ParserRuleContext {
		public TypedParameterContext typedParameter() {
			return GetRuleContext<TypedParameterContext>(0);
		}
		public ColumnParameterContext columnParameter() {
			return GetRuleContext<ColumnParameterContext>(0);
		}
		public FunctionParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterFunctionParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitFunctionParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterContext functionParameter() {
		FunctionParameterContext _localctx = new FunctionParameterContext(Context, State);
		EnterRule(_localctx, 12, RULE_functionParameter);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78; typedParameter();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; columnParameter();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SuperFunctionArgumentContext : ParserRuleContext {
		public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		public ITerminalNode Literal() { return GetToken(DescriptParser.Literal, 0); }
		public SuperFunctionArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_superFunctionArgument; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterSuperFunctionArgument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitSuperFunctionArgument(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSuperFunctionArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SuperFunctionArgumentContext superFunctionArgument() {
		SuperFunctionArgumentContext _localctx = new SuperFunctionArgumentContext(Context, State);
		EnterRule(_localctx, 14, RULE_superFunctionArgument);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TableReference:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82; reference();
				}
				break;
			case Literal:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; Match(Literal);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SuperFunctionContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(DescriptParser.Identifier, 0); }
		public ITerminalNode LParam() { return GetToken(DescriptParser.LParam, 0); }
		public ITerminalNode RParam() { return GetToken(DescriptParser.RParam, 0); }
		public SuperFunctionArgumentContext[] superFunctionArgument() {
			return GetRuleContexts<SuperFunctionArgumentContext>();
		}
		public SuperFunctionArgumentContext superFunctionArgument(int i) {
			return GetRuleContext<SuperFunctionArgumentContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(DescriptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(DescriptParser.Comma, i);
		}
		public SuperFunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_superFunction; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterSuperFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitSuperFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSuperFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SuperFunctionContext superFunction() {
		SuperFunctionContext _localctx = new SuperFunctionContext(Context, State);
		EnterRule(_localctx, 16, RULE_superFunction);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(Identifier);
			State = 87; Match(LParam);
			State = 93;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 88; superFunctionArgument();
					State = 89; Match(Comma);
					}
					} 
				}
				State = 95;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Literal || _la==TableReference) {
				{
				State = 96; superFunctionArgument();
				}
			}

			State = 99; Match(RParam);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SuperFunctionClauseContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(DescriptParser.Colon, 0); }
		public SuperFunctionContext[] superFunction() {
			return GetRuleContexts<SuperFunctionContext>();
		}
		public SuperFunctionContext superFunction(int i) {
			return GetRuleContext<SuperFunctionContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(DescriptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(DescriptParser.Comma, i);
		}
		public SuperFunctionClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_superFunctionClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterSuperFunctionClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitSuperFunctionClause(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSuperFunctionClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SuperFunctionClauseContext superFunctionClause() {
		SuperFunctionClauseContext _localctx = new SuperFunctionClauseContext(Context, State);
		EnterRule(_localctx, 18, RULE_superFunctionClause);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(Colon);
			State = 107;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 102; superFunction();
					State = 103; Match(Comma);
					}
					} 
				}
				State = 109;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Identifier) {
				{
				State = 110; superFunction();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsesClauseContext : ParserRuleContext {
		public ITerminalNode Uses() { return GetToken(DescriptParser.Uses, 0); }
		public UsesFragContext[] usesFrag() {
			return GetRuleContexts<UsesFragContext>();
		}
		public UsesFragContext usesFrag(int i) {
			return GetRuleContext<UsesFragContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(DescriptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(DescriptParser.Comma, i);
		}
		public UsesClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usesClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterUsesClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitUsesClause(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsesClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsesClauseContext usesClause() {
		UsesClauseContext _localctx = new UsesClauseContext(Context, State);
		EnterRule(_localctx, 20, RULE_usesClause);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(Uses);
			State = 119;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 114; usesFrag();
					State = 115; Match(Comma);
					}
					} 
				}
				State = 121;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 122; usesFrag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsesFragContext : ParserRuleContext {
		public ITerminalNode[] Identifier() { return GetTokens(DescriptParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(DescriptParser.Identifier, i);
		}
		public ITerminalNode As() { return GetToken(DescriptParser.As, 0); }
		public UsesFragContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usesFrag; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.EnterUsesFrag(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDescriptParserListener typedListener = listener as IDescriptParserListener;
			if (typedListener != null) typedListener.ExitUsesFrag(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDescriptParserVisitor<TResult> typedVisitor = visitor as IDescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsesFrag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsesFragContext usesFrag() {
		UsesFragContext _localctx = new UsesFragContext(Context, State);
		EnterRule(_localctx, 22, RULE_usesFrag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; Match(Identifier);
			State = 125; Match(As);
			State = 126; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
